@@ -622,21 +622,21 @@ NaNone:0
 1/3:0
 100/100:1
 0.1/0.1:1
-#&ffloor
-#0:0
-#abc:NaN
-#+inf:inf
-#-inf:-inf
-#1:1
-#-51:-51
-#-51.2:-52
-#12.2:12
-#&fceil
-#0:0
-#abc:NaN
-#+inf:inf
-#-inf:-inf
-#1:1
-#-51:-51
-#-51.2:-51
-#12.2:13
+&ffloor
+0:0
+abc:NaN
++inf:inf
+-inf:-inf
+1:1
+-51:-51
+-51.2:-52
+12.2:12
+&fceil
+0:0
+abc:NaN
++inf:inf
+-inf:-inf
+1:1
+-51:-51
+-51.2:-51
+12.2:13
